--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Trøndelag Ortopediske Verksted
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1>
+  <button ion-button color="dark" full round (click)="scan()">Skann strekkode</button>
+</h1>
+
+<ion-card *ngIf="productFound">
+  <ion-card-header>
+    <h2>Strekkode:{{selectedProduct.barcode}}</h2>
+  </ion-card-header>
+  <ion-card-content>
+    <ul>
+      <li>{{selectedProduct.benevning}}</li>
+      <li>{{selectedProduct.vendor}}</li>
+      <li>{{selectedProduct.vendoritemnumber}}</li>
+    </ul>
+      <button ion-button color="dark" full round (click)="pick()">Registrer som plukket</button>
+  </ion-card-content>
+</ion-card>
 </ion-content>
