Added comments field

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
 
-    <ion-title>Instillinger</ion-title>
+    <ion-title>Innstillinger</ion-title>
   </ion-navbar>
 
 </ion-header>
