--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,23 +13,15 @@
   <h1>
   <button ion-button color="dark" full round (click)="scan()">Skann strekkode</button>
 </h1>
-
-  <ion-card *ngIf="productFound">
-    <ion-card-header>
-      <h2>Strekkode:{{selectedProduct.barcode}}</h2>
-    </ion-card-header>
-    <ion-card-content>
-      <ul>
-        <li>{{selectedProduct.benevning}}</li>
-        <li>{{selectedProduct.vendor}}</li>
-        <li>{{selectedProduct.vendoritemnumber}}</li>
-      </ul>
-      <button ion-button color="dark" full round (click)="pick()">Registrer som plukket</button>
-    </ion-card-content>
-  </ion-card>
+  Plukkede produkter vil bli registrert på {{userName}}
   <ion-card >
-    <h1>
-    <button ion-button color="dark" full round [navPush]="settingsPage">Instillinger...</button>
-  </h1>
+    <div style="position: absolute; bottom: 0px; width: 100%">
+        <div style="text-align: center">
+          <h1>
+          <button ion-button color="dark" round [navPush]="settingsPage">Innstillinger...</button>
+        </h1>
+        </div>
+    </div>
+
   </ion-card>
 </ion-content>
