Added splash.  Give error message on communication error

--- a/src/pages/collect/collect.html
+++ b/src/pages/collect/collect.html
@@ -16,7 +16,7 @@
     <li>{{selectedProduct.vendoritemnumber}}</li>
   </ul>
   <ion-item>
-    <ion-label>Kommentarer</ion-label>
+    <ion-label>Kommentarer:</ion-label>
     <ion-textarea [(ngModel)]="info"></ion-textarea>
   </ion-item>
   <button ion-button color="dark" full round (click)="pick()">Registrer som plukket</button>
