Renamed fileds to correspond with DB schema

--- a/src/pages/collect/collect.html
+++ b/src/pages/collect/collect.html
@@ -10,10 +10,11 @@
 <ion-content padding>
   <ul>
     <li>{{userName}}</li>
-    <li>{{selectedProduct.barcode}}</li>
+    <li>{{selectedProduct.streck_kod_lev}}</li>
+    <li>{{selectedProduct.strekkode}}</li>
     <li>{{selectedProduct.benevning}}</li>
-    <li>{{selectedProduct.vendor}}</li>
-    <li>{{selectedProduct.vendoritemnumber}}</li>
+    <li>{{selectedProduct.leverandor}}</li>
+    <li>{{selectedProduct.levartnr}}</li>
   </ul>
   <ion-item>
     <ion-label>Kommentarer:</ion-label>
